btp_helm_deploy/templates/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: nginx
   namespace: test-btp
spec:
   tls:
     - secretName: nuthan-com-tls
       hosts:
         - nuthan.com
   rules:
     - host: nuthan.com
       http:
         paths:
           - backend:
                serviceName: nginx
                servicePort: 80
